--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         font-size: 1.25em;
                     }
                 </style>
-        <title>Mimi's Capitol Website</title>
+        <title>Mimi's Shoe Website</title>
         <style>
                 body {
                     background: rgb(125, 198, 205);
@@ -130,12 +130,12 @@
             <div id="all-contents"> 
                     <nav>
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="index.html"></a></li>
+                            <li><a href="portfolio.html"></a></li>
                         </ul>
                     </nav>
                     <nav>
-                        <header>Mimi's Capitol Website</header>
+                        <header>Mimi's Shoe Website</header>
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
@@ -148,17 +148,17 @@
                                 </div>
                                 <div class="content">
                                     <section> 
-                                        <header>Antoniq'</header>
+                                        <header>Shoes</header>
                                         <ul>
-                                            <li>SmartLab</li>
-                                            <li>Boys Basketball</li>
-                                            <li>The Amazing Graduating Class of 2020</li>
+                                            <li>G-Nikes</li>
+                                            <li>Airmax</li>
+                                            <li>Vans</li>
                                         </ul>
                                         <nav>
                                         
                                     </section>
 
-                                    <p>Student at Capitol High</p>
+                                    <p>I Love Shoes!</p>
                                 </div>
                     </main>
                 </div>
