--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
                     
                     <main>
                             <div class="sidebar">
-                                    <img src=https://www.wafb.com/resizer/qNywOqFYFGmTxtxdZebFIbsdtMw=/1400x0/arc-anglerfish-arc2-prod-raycom.s3.amazonaws.com/public/6YWHXTON6JDFVF3UMJJFVQAZWE.jpg>
-                                </div>
+                                    <img src= https://www.planetbmx.com/shop/images/source/W2W_VANS_SHOES_3.jpg height= 150 width= 48 >
+                        </div>
+
                                 <div class="content">
                                     <section> 
                                         <header>Shoes</header>
